syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "common/source.proto";

option go_package = "api/grpc/v1/email;email_grpc_service";

message UpsertEmailGrpcRequest {
  string tenant = 1;
  string rawEmail = 2;
  string appSource = 3 [deprecated = true];
  string source = 4 [deprecated = true];
  string sourceOfTruth = 5 [deprecated = true];
  google.protobuf.Timestamp  createdAt = 6;
  google.protobuf.Timestamp  updatedAt = 7;
  string id = 8;
  string loggedInUserId = 9;
  SourceFields sourceFields = 10;
}

message FailEmailValidationGrpcRequest {
  string tenant = 1;
  string emailId = 2;
  string errorMessage = 3;
  string appSource = 4;
  string loggedInUserId = 5;
}

message EmailIdGrpcResponse {
  string id = 1;
}

service emailGrpcService {
  rpc UpsertEmail(UpsertEmailGrpcRequest) returns (EmailIdGrpcResponse);
  rpc FailEmailValidation(FailEmailValidationGrpcRequest) returns (EmailIdGrpcResponse);
}
